<resources>
    <string name="app_name">GeekBrains_MovieViewer</string>
    <string name="watchlist">Watchlist</string>
    <string name="favorites">Favorites</string>
    <string name="release_date">Release date:</string>
    <string name="genres">Genres:</string>
    <string name="keywords">Keywords:</string>
    <string name="imdb">IMDB:</string>
    <string name="produced_by">Produced by:</string>
    <string name="country">Country:</string>
    <string name="movie_image">Movie image</string>
    <string name="credits">Credits:</string>
    <string name="home">Home:</string>
    <string name="top">TOP</string>
    <string name="search">Search</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_popularity">Sort by popularity</string>
    <string name="movies_content">Movies content</string>

    <string name="adult_content">Adult content</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="settings">Settings</string>
    <string name="languages">Languages:</string>
    <string name="languages_summary">Choose languages for film searching</string>
    <string name="add_to_watch_list">Add to watch list</string>
    <string name="remove_from_watch_list">Remove from watch list</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
</resources>